<resources>
    <string name="app_name">Databank</string>
    <string name="database_name">databank.db</string>
    <string name="add_account">Add Account</string>
    <string name="save">Save</string>
    <string name="account_name">Enter account name</string>
    <string name="account_balance">Enter account balance</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="transaction_amount">Enter transaction amount</string>
    <string name="back">Back</string>
    <string name="transaction_description">Enter transaction description</string>
    <string name="transaction_date">YYYY-MM-DD</string>
    <string name="save_changes">Save changes</string>
    <string name="new_account_name">New account name</string>
    <string name="new_account_balance">New account balance</string>
    <string name="delete_account">Delete account</string>
    <string name="new_transaction_amount">New transaction amount</string>
    <string name="new_transaction_description">New transaction description</string>
    <string name="new_transaction_date">New transaction date</string>
    <string name="delete_transaction">Delete transaction</string>
    <string name="default_currency">$0.00</string>
    <string name="delete_all">Delete all</string>
    <string name="edit_account_button">Edit account</string>
    <string name="edit_transaction_button">Edit transaction</string>
    <string name="account_appbar">Accounts</string>
    <string name="transaction_appbar">Transactions</string>
    <string name="edit_account_appbar">Edit Account</string>
    <string name="cancel">Cancel</string>
    <string name="new_account_appbar">New Account</string>
    <string name="new_transaction_appbar">New Transaction</string>
    <string name="edit_transaction_appbar_1">Transaction Details</string>
    <string name="edit_transaction_appbar_2">Edit Transaction</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert_confirm_delete">Confirm Delete</string>
    <string name="alert_delete_text">Are you sure you want to delete this?</string>
    <string name="select_category">Select Category</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="export_data">Export data</string>
    <string name="import_data">Import data</string>
    <string name="hidden">Hidden</string>
    <string name="transfer">Transfer</string>
    <string name="edit">Edit</string>
    <string name="show_values">Show account amounts</string>
    <string name="transaction_summary">Transaction Summary</string>
    <string name="transaction_from_date">From: YYYY-MM-DD</string>
    <string name="transaction_to_date">To: YYYY-MM-DD</string>
    <string name="search">Search</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string-array name="transaction_categories">
        <item>Automotive</item>
        <item>Account Transfer</item>
        <item>Bills &amp; Utilities</item>
        <item>Cash Deposit</item>
        <item>Cash Withdraw</item>
        <item>Credit Card Payment</item>
        <item>Education</item>
        <item>Entertainment</item>
        <item>Food &amp; Drinks</item>
        <item>Gas</item>
        <item>Groceries</item>
        <item>Health &amp; wellness</item>
        <item>Home</item>
        <item>Investment</item>
        <item>Other</item>
        <item>Paycheck</item>
        <item>Personal</item>
        <item>Professional Services</item>
        <item>Shopping</item>
        <item>Travel</item>
    </string-array>
</resources>