<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    tools:context=".EditTransactionActivity">

    <Toolbar
        android:id="@+id/editTransactionAppbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/appbar"
        android:elevation="4dp"
        android:title="@string/edit_transaction_appbar_1"
        android:titleTextAppearance="@style/AppbarTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEditTransactionAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTransactionAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="number"
            android:maxLength="15"
            android:background="@color/rowItem"
            android:hint="@string/new_transaction_amount"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/editRadioGroupTransactionType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputEditTransactionAmount">

        <RadioButton
            android:id="@+id/editRadioDebitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/debit"
            android:textColor="@color/white"
            android:buttonTint="@color/rowItem"/>
        <RadioButton
            android:id="@+id/editRadioCreditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/credit"
            android:textColor="@color/white"
            android:buttonTint="@color/rowItem"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEditTransactionDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="255"
        app:layout_constraintTop_toBottomOf="@id/editRadioGroupTransactionType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTransactionDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:background="@color/rowItem"
            android:hint="@string/new_transaction_description"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEditTransactionDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textInputEditTransactionDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTransactionDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:background="@color/rowItem"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"
            android:hint="@string/new_transaction_date"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEditTransactionCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:enabled="false"
        android:textColorHint="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:hintTextColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditTransactionDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <AutoCompleteTextView
            android:id="@+id/editTransactionCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:background="@color/rowItem"
            android:hint="@string/select_category"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveEditTransactionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/rowItem"
        app:layout_constraintTop_toBottomOf="@id/textInputEditTransactionCategory"
        app:layout_constraintStart_toEndOf="@+id/cancelEditTransactionButton"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/cancelEditTransactionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/red"
        android:backgroundTint="@color/rowItem"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveEditTransactionButton"
        app:layout_constraintTop_toBottomOf="@id/textInputEditTransactionCategory"/>

    <Button
        android:id="@+id/transferTransactionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/transfer"
        android:textColor="@color/white"
        android:backgroundTint="@color/rowItem"
        app:layout_constraintTop_toBottomOf="@id/cancelEditTransactionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteTransactionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:contentDescription="@string/delete_transaction"
        android:focusable="true"
        app:tint="@color/red"
        app:backgroundTint="@color/rowItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/delete_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>