<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".EditAccountActivity">

    <Toolbar
        android:id="@+id/changeAccountAppbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/appbar"
        android:elevation="4dp"
        android:title="@string/edit_account_appbar"
        android:titleTextAppearance="@style/AppbarTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputChangeAccountName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/saveEditAccountButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changeAccountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/rowItem"
            android:textColor="@color/white"

            android:hint="@string/new_account_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveEditAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/rowItem"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textInputChangeAccountName"
        app:layout_constraintStart_toEndOf="@+id/cancelEditAccountButton"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/cancelEditAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:backgroundTint="@color/rowItem"
        android:textColor="@color/red"
        app:layout_constraintEnd_toStartOf="@+id/saveEditAccountButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputChangeAccountName"/>
</androidx.constraintlayout.widget.ConstraintLayout>