<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionSummary">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputTransFromDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/transFromDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/rowItem"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"
            android:hint="@string/transaction_from_date"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputTransToDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textInputTransFromDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/transToDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/rowItem"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"
            android:hint="@string/transaction_to_date"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveDateRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/search"
        android:textColor="@color/white"
        android:backgroundTint="@color/rowItem"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/textInputTransToDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pieChart"/>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/saveDateRange"/>

</androidx.constraintlayout.widget.ConstraintLayout>